Agrega texto a carrusel
utiliza un id text y en css se les da el color y tamaÃo 18px
c:

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <div class="carousel-inner">
           <div class="item active">
             <img src="img/img1.jpg" alt="Familia Lopez" style="width:100%;">
+            <p id="text"> lkjfdjlkdfjlkdgjlkfdsjkdfjklds </p>
           </div>
     
           <div class="item">
